@@ -27,6 +27,7 @@ PCSX-Reloaded Authors/Contributors: avlex (Help on xcode project)
 			    maggix (Snow Leopard compile fix)
 			    NeToU (Bugfix)
 			    Peter Collingbourne (Various core/psxbios fixes)
+			    siveritas (Bugfix)
 			    shalma (GTE Divider, various core fixes)
 			    Tristin Celestin (PulseAudio support)
 			    Wei Mingzhi (Maintainer, input plugin, iso/cheat support, misc stuff)
